--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+app.db.worker.driver=org.postgresql.Driver
+app.db.worker.url=jdbc:postgresql://localhost:5432/sciencejournal
+app.db.worker.username=postgres
+app.db.worker.password=adminadmin
