--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ app.db.worker.url=jdbc:postgresql://localhost:5432/sciencejournal
 app.db.worker.username=postgres
 app.db.worker.password=adminadmin
 spring.liquibase.enabled=false
+
+logging.level.root=INFO
+logging.level.ru.agk13145.sciencejournal=DEBUG
